--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html>
+
     <head>
+        <link rel="stylesheet" href="css/index.css">
         <title>Haley's Portfolio</title>
     </head>
-    <body>
-        <header class="navigation">
 
+    <body>
+
+        <header class="navigation">
+            <div class="inline-block logo">
+                <img src="/Users/haleyhetrick/Documents/UX:UI Bootcamp 2022/06_My Code/17 Week/UX_UI_HW_17/images/LOGO.png" 
+                alt="Haley Hetrick's Logo" 
+                height="100px">
+                </img>
+            </div>
+            <nav class="inline-block">
+                <ul>
+                    <li class="inline-block">About Me</li>
+                    <li class="inline-block">Projects</li>
+                    <li class="inline-block">Contact</li>
+                    <li class="inline-block">LinkedIn</li>
+                    <li class="inline-block">Resume</li>
+                </ul>
+            </nav>
         </header>
+
+        <section class="heroImg">
+            <div class="content">
+                <img src="/Users/haleyhetrick/Documents/UX:UI Bootcamp 2022/06_My Code/17 Week/UX_UI_HW_17/images/Me.png" 
+                alt="Background Graphic"
+                height="400px"
+                width="875px">
+                </img>
+                <div class="IntroText">
+                    <h1>Howdy!</h1>
+                    <p>I’m Haley, a UX Designer & Researcher with a passion for people. I enjoy understanding users through intentional research and using robust data to implement data-driven design decisions. When I’m not designing or researching, you can find me traveling, reading, gardening, knitting, or being smothered by my three cats.</p>
+                </div>
+            </div>
+            <div>
+                <button>Download Resume</button>
+            </div>
+        </section>
+
+        <section class="ProjectsSection">
+            <div class="ProjectItem"></div>
+            <div class="ProjectItem"></div>
+            <div class="ProjectItem"></div>
+        </section>
+
+        <footer>
+            <ul>
+                <li class="inline-block">Contact Me</li>
+                <li class="inline-block">LinkedIn</li>
+                <li class="inline-block">Resume</li>
+            </ul>
+        </footer>
+
     </body>
+
 </html>
