--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <header class="navigation">
             <div class="inline-block logo">
-                <img src="/Users/haleyhetrick/Documents/UX:UI Bootcamp 2022/06_My Code/17 Week/UX_UI_HW_17/images/LOGO.png" 
+                <img src="images/LOGO.png" 
                 alt="Haley Hetrick's Logo" 
                 height="100px">
                 </img>
@@ -28,7 +28,7 @@
 
         <section class="heroImg">
             <div class="content">
-                <img src="/Users/haleyhetrick/Documents/UX:UI Bootcamp 2022/06_My Code/17 Week/UX_UI_HW_17/images/Me.png" 
+                <img src="images/Me.png" 
                 alt="Background Graphic"
                 height="400px"
                 width="875px">
