--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <head>
         <link rel="stylesheet" href="css/index.css">
         <title>Haley's Portfolio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     </head>
 
     <body>
